[gd_scene load_steps=23 format=3 uid="uid://dj6u6rc3s4722"]

[ext_resource type="Script" path="res://Ship/ship_controls.gd" id="1_yjlcn"]
[ext_resource type="PackedScene" uid="uid://covtchtsxv2rj" path="res://Ship/Model/Ship_NoGun.glb" id="2_a21gr"]
[ext_resource type="PackedScene" uid="uid://dqeno0n7savjs" path="res://Ship/Model/Ship_Gun.glb" id="3_vj01m"]
[ext_resource type="PackedScene" uid="uid://oafwefdr7emu" path="res://Ship/Model/Cockpit.glb" id="4_oj4vl"]
[ext_resource type="PackedScene" uid="uid://8ond6t8eieh3" path="res://Ship/Model/Cockpit_Light.glb" id="5_0gktd"]
[ext_resource type="PackedScene" uid="uid://2vn130y13nm" path="res://Ship/Player/player.tscn" id="5_rbt8u"]
[ext_resource type="Script" path="res://Ship/interactive.gd" id="6_2eubl"]
[ext_resource type="PackedScene" uid="uid://c33ysxvxsflwi" path="res://Ship/Model/Cockpit_Steering.glb" id="7_0twe6"]
[ext_resource type="Script" path="res://Ship/EnergyPanel.gd" id="8_qfucs"]
[ext_resource type="Material" uid="uid://cp3m1wkmuqhr6" path="res://Ship/energy_button_active.tres" id="9_51oge"]
[ext_resource type="Material" uid="uid://0ucoc47fgjpp" path="res://Ship/energy_button_inactive.tres" id="10_eam4q"]
[ext_resource type="PackedScene" uid="uid://cyrnroyjrmhkq" path="res://Aliens/creature_high.tscn" id="12_gvh35"]
[ext_resource type="ArrayMesh" uid="uid://dh6gop8uwdcp8" path="res://Aliens/Alien_med.res" id="13_vripf"]
[ext_resource type="Material" uid="uid://6tnrvwb8n77" path="res://Aliens/alien_background_mat.tres" id="14_174mg"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_mtawh"]
radius = 5.66975
height = 11.3395

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hhtv1"]
albedo_color = Color(0.160784, 0.160784, 0.160784, 1)
metallic = 0.56

[sub_resource type="BoxMesh" id="BoxMesh_cukol"]
size = Vector3(0.6, 0.4, 0.01)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_iw7yb"]
height = 0.1
radius = 0.05

[sub_resource type="BoxMesh" id="BoxMesh_wu8i2"]
size = Vector3(0.05, 0.05, 0.05)

[sub_resource type="GDScript" id="GDScript_y6dx1"]
script/source = "extends Node3D

@export var HitAlienNodes : Array[Node3D]

func _ready():
	for i in HitAlienNodes:
		i.hide()
		
func show_alien():
	if HitAlienNodes.size() == 0: return
	
	HitAlienNodes.pop_at(randi() % HitAlienNodes.size()).show()
"

[sub_resource type="GDScript" id="GDScript_4ucug"]
script/source = "extends Node3D

func _ready():
	for c in get_children():
		if c == $Timer: continue
		c.rotation.z = randf() * 2 * PI
		c.rotation.x = randf_range(-PI/8, PI/8)
		c.rotation.y = randf_range(-PI/8, PI/8)
		c.hide()
		
		
func reveal():
	$Timer.start()
	
	
@onready var children = get_children()
var _next_show_count = 1
@export var show_step = .5

func _on_timer_timeout():
	_next_show_count += show_step
	
	for i in int(_next_show_count):
		
		if children.size() == 0:
			$Timer.stop()
			break
			
		var p = randi() % children.size()
		if children[p] == $Timer:
			children.pop_front()
			continue
			
		children.pop_at(p).show()
"

[sub_resource type="PlaneMesh" id="PlaneMesh_spvap"]
size = Vector2(1000, 1000)

[node name="Ship" type="RigidBody3D"]
collision_layer = 16
gravity_scale = 0.0
can_sleep = false
angular_damp_mode = 1
angular_damp = 5.0
script = ExtResource("1_yjlcn")
MinSpeed = 100.0
MaxSpeed = 200.0
TurnAccel = 6.5

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0953029)
collision_layer = 16
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0.439745)
shape = SubResource("CapsuleShape3D_mtawh")

[node name="FrontLight" type="SpotLight3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 2.78426)
spot_range = 200.0
spot_attenuation = 0.307786
spot_angle = 70.0

[node name="Model" parent="." instance=ExtResource("2_a21gr")]

[node name="Gun_L" parent="Model" instance=ExtResource("3_vj01m")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.92852, 0.741354, -0.934406)
visible = false

[node name="Gun_R" parent="Model" instance=ExtResource("3_vj01m")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.929, 0.741, -0.934)
visible = false

[node name="Cockpit" parent="Model" instance=ExtResource("4_oj4vl")]

[node name="Cockpit_Light" parent="Model/Cockpit" instance=ExtResource("5_0gktd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.164994)

[node name="OmniLight3D" type="OmniLight3D" parent="Model/Cockpit/Cockpit_Light"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.96046e-08, 0.531827, 0.442641)
omni_range = 2.25

[node name="Cockpit_Steering" parent="." instance=ExtResource("7_0twe6")]
transform = Transform3D(1, 0, 0, 0, 0.769622, 0.638499, 0, -0.638499, 0.769622, 0, -0.915367, 0.0909652)

[node name="Player Position" type="Node3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, -8.47175e-09, 0.995294, 0.0969054, 8.70114e-08, 0.0969054, -0.995294, 0, 0.500076, 0.40535)

[node name="Player" parent="Player Position" instance=ExtResource("5_rbt8u")]

[node name="InvincibilityTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(0.699663, 0.240845, 0.672655, 0, 0.941471, -0.337095, -0.714473, 0.235853, 0.658712, 0.647397, -0.0676668, 1.07246)
visible = false
material_override = SubResource("StandardMaterial3D_hhtv1")
mesh = SubResource("BoxMesh_cukol")
script = ExtResource("8_qfucs")
ButtonActive = ExtResource("9_51oge")
ButtonInactive = ExtResource("10_eam4q")

[node name="ButtonBody3D" type="StaticBody3D" parent="MeshInstance3D"]
transform = Transform3D(1, -2.98023e-08, 0, -1.49012e-08, 1, -1.49012e-08, 2.98023e-08, 4.47035e-08, 1, 0, 0, 0)
collision_layer = 32
collision_mask = 0
script = ExtResource("6_2eubl")

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/ButtonBody3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
shape = SubResource("CylinderShape3D_iw7yb")

[node name="Model" type="MeshInstance3D" parent="MeshInstance3D/ButtonBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 2.98023e-08, -1.49012e-08, 1, 0, 0, 0)
material_override = ExtResource("10_eam4q")
mesh = SubResource("BoxMesh_wu8i2")
skeleton = NodePath("../..")

[node name="AlienPositions" type="Node3D" parent="." node_paths=PackedStringArray("HitAlienNodes")]
script = SubResource("GDScript_y6dx1")
HitAlienNodes = [NodePath("BotLeft"), NodePath("BotRight"), NodePath("TopRight"), NodePath("TopLeft")]

[node name="BotLeft" type="Node3D" parent="AlienPositions"]
transform = Transform3D(0.039148, -0.0378659, 0.0838666, 0.0436382, 0.08788, 0.0193081, -0.0810132, 0.0290391, 0.0509273, 1.06733, 1.19209e-07, 1.3803)

[node name="Creature_High" parent="AlienPositions/BotLeft" instance=ExtResource("12_gvh35")]
transform = Transform3D(1, 0, -2.98023e-08, -4.47035e-08, 1, -5.96046e-08, -8.9407e-08, 7.45058e-08, 1, -1.08378, 0.218266, 1.45601)

[node name="BotRight" type="Node3D" parent="AlienPositions"]
transform = Transform3D(-0.0417588, 0.0634303, -0.06506, -0.0908425, -0.0276012, 0.0313976, 0.00195827, 0.0722134, 0.0691476, -1.03525, 1.19209e-07, 1.37574)

[node name="Creature_High" parent="AlienPositions/BotRight" instance=ExtResource("12_gvh35")]

[node name="TopRight" type="Node3D" parent="AlienPositions"]
transform = Transform3D(0.0736671, -0.0177678, -0.0652492, 0.0396813, 0.0894869, 0.0204327, 0.054759, -0.0409439, 0.0729729, -0.655179, 0.652333, 1.53399)

[node name="Creature_High" parent="AlienPositions/TopRight" instance=ExtResource("12_gvh35")]

[node name="TopLeft" type="Node3D" parent="AlienPositions"]
transform = Transform3D(-0.0872771, -0.0131745, 0.0470014, 0.0272718, -0.0930198, 0.0245676, 0.0404839, 0.03426, 0.084778, 0.64805, 0.81671, 1.51901)

[node name="Creature_High" parent="AlienPositions/TopLeft" instance=ExtResource("12_gvh35")]

[node name="DeathAlienPositions" type="Node3D" parent="."]
script = SubResource("GDScript_4ucug")
show_step = 0.35

[node name="Timer" type="Timer" parent="DeathAlienPositions"]
wait_time = 0.15

[node name="BotLeft" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 1.06733, 1.19209e-07, 1.3803)

[node name="Creature_High" parent="DeathAlienPositions/BotLeft" instance=ExtResource("12_gvh35")]
transform = Transform3D(1, 0, -2.98023e-08, -4.47035e-08, 1, -5.96046e-08, -8.9407e-08, 7.45058e-08, 1, -1.08378, 0.218266, 1.45601)

[node name="BotRight" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -1.03525, 1.19209e-07, 1.37574)

[node name="Creature_High" parent="DeathAlienPositions/BotRight" instance=ExtResource("12_gvh35")]

[node name="TopRight" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.655179, 0.652333, 1.53399)

[node name="Creature_High" parent="DeathAlienPositions/TopRight" instance=ExtResource("12_gvh35")]

[node name="TopLeft" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0.64805, 0.81671, 1.51901)

[node name="Creature_High" parent="DeathAlienPositions/TopLeft" instance=ExtResource("12_gvh35")]

[node name="TopLeft2" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 1.00642, 0.755136, 1.51901)

[node name="Creature_High" parent="DeathAlienPositions/TopLeft2" instance=ExtResource("12_gvh35")]

[node name="TopLeft3" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0.711018, 0.297514, 1.51901)

[node name="Creature_High" parent="DeathAlienPositions/TopLeft3" instance=ExtResource("12_gvh35")]

[node name="TopLeft4" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0.0203031, -0.101967, 1.89098)

[node name="Creature_High" parent="DeathAlienPositions/TopLeft4" instance=ExtResource("12_gvh35")]

[node name="TopLeft5" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.217721, 0.322758, 1.67649)

[node name="Creature_High" parent="DeathAlienPositions/TopLeft5" instance=ExtResource("12_gvh35")]

[node name="TopLeft6" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0.308259, 0.473517, 1.67649)

[node name="Creature_High" parent="DeathAlienPositions/TopLeft6" instance=ExtResource("12_gvh35")]

[node name="TopLeft7" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0.0173305, 0.629625, 1.67649)

[node name="Creature_High" parent="DeathAlienPositions/TopLeft7" instance=ExtResource("12_gvh35")]

[node name="TopLeft8" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0.352138, 0.91263, 1.67649)

[node name="Creature_High" parent="DeathAlienPositions/TopLeft8" instance=ExtResource("12_gvh35")]

[node name="TopLeft9" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.183649, 0.890366, 1.67649)

[node name="Creature_High" parent="DeathAlienPositions/TopLeft9" instance=ExtResource("12_gvh35")]

[node name="TopLeft10" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.361164, 0.578771, 1.67649)

[node name="Creature_High" parent="DeathAlienPositions/TopLeft10" instance=ExtResource("12_gvh35")]

[node name="TopLeft11" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.590079, 0.189603, 1.67649)

[node name="Creature_High" parent="DeathAlienPositions/TopLeft11" instance=ExtResource("12_gvh35")]

[node name="TopLeft12" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.35199, -0.179479, 1.99655)

[node name="Creature_High" parent="DeathAlienPositions/TopLeft12" instance=ExtResource("12_gvh35")]

[node name="TopLeft13" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0.273027, -0.0777698, 1.99655)

[node name="Creature_High" parent="DeathAlienPositions/TopLeft13" instance=ExtResource("12_gvh35")]

[node name="TopLeft14" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0.541471, 0.0390093, 1.99655)

[node name="Creature_High" parent="DeathAlienPositions/TopLeft14" instance=ExtResource("12_gvh35")]

[node name="TopLeft15" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0.916568, 0.322724, 1.848)

[node name="Creature_High" parent="DeathAlienPositions/TopLeft15" instance=ExtResource("12_gvh35")]

[node name="TopLeft16" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0.949985, -0.0121896, 1.848)

[node name="Creature_High" parent="DeathAlienPositions/TopLeft16" instance=ExtResource("12_gvh35")]

[node name="TopLeft17" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 1.00906, 0.276167, 1.41648)

[node name="Creature_High" parent="DeathAlienPositions/TopLeft17" instance=ExtResource("12_gvh35")]

[node name="TopLeft18" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0.748686, -0.159311, 2.29401)

[node name="Creature_High" parent="DeathAlienPositions/TopLeft18" instance=ExtResource("12_gvh35")]

[node name="TopLeft19" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.0245094, -0.152745, 2.29401)

[node name="Creature_High" parent="DeathAlienPositions/TopLeft19" instance=ExtResource("12_gvh35")]

[node name="TopLeft20" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0.404417, -0.152745, 2.29401)

[node name="Creature_High" parent="DeathAlienPositions/TopLeft20" instance=ExtResource("12_gvh35")]

[node name="TopLeft21" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.696369, 0.21627, 2.12577)

[node name="Creature_High" parent="DeathAlienPositions/TopLeft21" instance=ExtResource("12_gvh35")]

[node name="TopLeft22" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.972343, 0.0554314, 1.73051)

[node name="Creature_High" parent="DeathAlienPositions/TopLeft22" instance=ExtResource("12_gvh35")]

[node name="TopLeft23" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.911252, 0.581927, 1.73051)

[node name="Creature_High" parent="DeathAlienPositions/TopLeft23" instance=ExtResource("12_gvh35")]

[node name="TopLeft24" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.872613, 0.949034, 1.73051)

[node name="Creature_High" parent="DeathAlienPositions/TopLeft24" instance=ExtResource("12_gvh35")]

[node name="TopLeft25" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.617112, 0.878772, 1.73051)

[node name="Creature_High" parent="DeathAlienPositions/TopLeft25" instance=ExtResource("12_gvh35")]

[node name="TopLeft26" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.835741, -0.328713, 1.73051)

[node name="Creature_High" parent="DeathAlienPositions/TopLeft26" instance=ExtResource("12_gvh35")]

[node name="TopLeft28" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.257753, -0.65817, 2.10709)

[node name="Creature_High" parent="DeathAlienPositions/TopLeft28" instance=ExtResource("12_gvh35")]

[node name="TopLeft29" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0.10662, -0.65817, 2.10709)

[node name="Creature_High" parent="DeathAlienPositions/TopLeft29" instance=ExtResource("12_gvh35")]

[node name="TopLeft30" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0.54162, -0.65817, 2.10709)

[node name="Creature_High" parent="DeathAlienPositions/TopLeft30" instance=ExtResource("12_gvh35")]

[node name="TopLeft31" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 1.00216, -0.65817, 2.10709)

[node name="Creature_High" parent="DeathAlienPositions/TopLeft31" instance=ExtResource("12_gvh35")]

[node name="TopLeft38" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 1.20297, -0.65817, 1.84693)

[node name="Creature_High" parent="DeathAlienPositions/TopLeft38" instance=ExtResource("12_gvh35")]

[node name="TopLeft39" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 1.48125, -0.65817, 1.5543)

[node name="Creature_High" parent="DeathAlienPositions/TopLeft39" instance=ExtResource("12_gvh35")]

[node name="TopLeft40" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -1.15053, -0.439337, 1.81438)

[node name="Creature_High" parent="DeathAlienPositions/TopLeft40" instance=ExtResource("12_gvh35")]

[node name="TopLeft41" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -1.31112, -0.439337, 1.46205)

[node name="Creature_High" parent="DeathAlienPositions/TopLeft41" instance=ExtResource("12_gvh35")]

[node name="TopLeft42" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -1.4148, -0.439337, 1.11913)

[node name="Creature_High" parent="DeathAlienPositions/TopLeft42" instance=ExtResource("12_gvh35")]

[node name="TopLeft43" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -1.3479, 0.110445, 1.19977)

[node name="Creature_High" parent="DeathAlienPositions/TopLeft43" instance=ExtResource("12_gvh35")]

[node name="TopLeft44" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -1.09357, 0.403391, 1.54031)

[node name="Creature_High" parent="DeathAlienPositions/TopLeft44" instance=ExtResource("12_gvh35")]

[node name="TopLeft45" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -1.0989, 0.891059, 1.54031)

[node name="Creature_High" parent="DeathAlienPositions/TopLeft45" instance=ExtResource("12_gvh35")]

[node name="TopLeft46" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -1.21879, 0.899664, 1.28272)

[node name="Creature_High" parent="DeathAlienPositions/TopLeft46" instance=ExtResource("12_gvh35")]

[node name="TopLeft47" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -1.28058, 0.899664, 1.03715)

[node name="Creature_High" parent="DeathAlienPositions/TopLeft47" instance=ExtResource("12_gvh35")]

[node name="TopLeft48" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -1.28058, 0.545843, 1.25604)

[node name="Creature_High" parent="DeathAlienPositions/TopLeft48" instance=ExtResource("12_gvh35")]

[node name="TopLeft49" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -1.28058, 0.437026, 1.44867)

[node name="Creature_High" parent="DeathAlienPositions/TopLeft49" instance=ExtResource("12_gvh35")]

[node name="TopLeft50" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -1.28058, 0.472593, 0.865033)

[node name="Creature_High" parent="DeathAlienPositions/TopLeft50" instance=ExtResource("12_gvh35")]

[node name="TopLeft32" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0.942925, -0.341321, 2.17399)

[node name="Creature_High" parent="DeathAlienPositions/TopLeft32" instance=ExtResource("12_gvh35")]

[node name="TopLeft33" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 1.34511, -0.341321, 1.25065)

[node name="Creature_High" parent="DeathAlienPositions/TopLeft33" instance=ExtResource("12_gvh35")]

[node name="TopLeft34" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 1.29066, 0.180495, 1.32148)

[node name="Creature_High" parent="DeathAlienPositions/TopLeft34" instance=ExtResource("12_gvh35")]

[node name="TopLeft35" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 1.08042, 0.482857, 1.15039)

[node name="Creature_High" parent="DeathAlienPositions/TopLeft35" instance=ExtResource("12_gvh35")]

[node name="TopLeft36" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 1.08042, 0.773388, 1.15039)

[node name="Creature_High" parent="DeathAlienPositions/TopLeft36" instance=ExtResource("12_gvh35")]

[node name="TopLeft37" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0.958499, 0.951554, 1.26259)

[node name="Creature_High" parent="DeathAlienPositions/TopLeft37" instance=ExtResource("12_gvh35")]

[node name="TopLeft27" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.562792, -0.473023, 1.99329)

[node name="Creature_High" parent="DeathAlienPositions/TopLeft27" instance=ExtResource("12_gvh35")]

[node name="TopLeft51" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.562792, 1.26111, 1.56321)

[node name="Creature_High" parent="DeathAlienPositions/TopLeft51" instance=ExtResource("12_gvh35")]

[node name="TopLeft52" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.256319, 1.26111, 1.56321)

[node name="Creature_High" parent="DeathAlienPositions/TopLeft52" instance=ExtResource("12_gvh35")]

[node name="TopLeft53" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0.0833044, 1.15148, 1.56321)

[node name="Creature_High" parent="DeathAlienPositions/TopLeft53" instance=ExtResource("12_gvh35")]

[node name="TopLeft54" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0.346992, 1.26858, 1.56321)

[node name="Creature_High" parent="DeathAlienPositions/TopLeft54" instance=ExtResource("12_gvh35")]

[node name="TopLeft55" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.852939, 1.26858, 1.56321)

[node name="Creature_High" parent="DeathAlienPositions/TopLeft55" instance=ExtResource("12_gvh35")]

[node name="TopLeft56" type="Node3D" parent="DeathAlienPositions"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0.632649, 1.26858, 1.56321)

[node name="Creature_High" parent="DeathAlienPositions/TopLeft56" instance=ExtResource("12_gvh35")]

[node name="CPUParticles3D" type="CPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 7.84632)
emitting = false
amount = 300
lifetime = 1.5
preprocess = 1.0
local_coords = true
mesh = ExtResource("13_vripf")
emission_shape = 6
emission_ring_axis = Vector3(0, 0, 1)
emission_ring_height = 1.0
emission_ring_radius = 2.0
emission_ring_inner_radius = 0.9
particle_flag_align_y = true
particle_flag_rotate_y = true
spread = 60.0
gravity = Vector3(0, 0, -10)
radial_accel_min = 2.0
radial_accel_max = 10.0
angle_min = -2.0
angle_max = 2.0
scale_amount_min = 0.1
scale_amount_max = 0.25

[node name="MeshInstance3D" type="MeshInstance3D" parent="CPUParticles3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 200)
material_override = ExtResource("14_174mg")
mesh = SubResource("PlaneMesh_spvap")

[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_invincibility_timer_timeout"]
[connection signal="on_interact" from="MeshInstance3D/ButtonBody3D" to="MeshInstance3D" method="_on_button_body_3d_on_interact"]
[connection signal="timeout" from="DeathAlienPositions/Timer" to="DeathAlienPositions" method="_on_timer_timeout"]
